# UDT-cINN

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
configs/: cinn_mnist_conf.yaml  gan_cinn_mnist_conf.yaml  waic_conf.yaml  waic_mnist_conf.yaml
docs/: Makefile  conf.py  index.rst  make.bat
models/: generic_1_layer.ini
src/: __init__.py  inference.py  reproduce_paper_results.sh  run_all_experiments.sh  run_training_cluster.sh  run_training_pc.sh  settings.py  test.py  train.py
src/configs/: alignflow_hsi_conf.yaml  cinn_conf.yaml  cinn_mnist_conf.yaml  cycle_gan_conf.yaml  cycle_gan_hsi_conf.yaml  gan_cinn_conf.yaml  gan_cinn_hsi_conf.yaml  gan_cinn_mnist_conf.yaml  gan_inn_conf.yaml  gan_inn_mnist_conf.yaml  inn_conf.yaml  inn_mnist_conf.yaml  test_conf.yaml  unit_conf.yaml  unit_hsi_conf.yaml  unit_mnist_conf.yaml  waic_conf.yaml  waic_hsi_conf.yaml  waic_mnist_conf.yaml
src/data/: __init__.py  calculate_class_prevalences_in_data.py  download_datasets.py  generate_dummy_hsi_data.py  make_knn_dataset.py  make_layered_dataset.py  make_unique_knn_dataset.py  mapping.json  multi_layer_loader.py  post_process_generated_data.py  semantic_data_splits.json  semantic_organ_labels.json  split_dataset.py  split_hsi_datasets.py  utils.py
src/evaluation/: artery_vein_classifier.py  calculate_waic.py  choose_best_model.py  compute_pai_pca.py  knn_redundancy.py  post_process_generated_data.py  real_sim_classifier.py  real_sim_comparison.py  si_classifier.py
src/features/: compute_semantic_stats.py
src/models/: align_flow.py  align_flow_hsi_model.py  align_flow_model.py  basic_blocks.py  discriminator.py  domain_adaptation_inn_base.py  domain_adaptation_inn_base_pa.py  encoder_decoder.py  encoder_decoder_hsi.py  gan_domain_adaptation_inn.py  inn_subnets.py  multiscale_invertible_blocks.py  real_nvp.py  regress.py  vae.py  vae_hsi.py
src/trainers/: __init__.py  alignflow_trainer.py  alignflow_trainer_hsi.py  conditional_inn_trainer.py  cycle_gan_hsi_trainer.py  cycle_gan_trainer.py  domain_adaptation_trainer_base.py  domain_adaptation_trainer_base_hsi.py  domain_adaptation_trainer_base_pa.py  gan_conditional_inn_trainer.py  gan_conditional_inn_trainer_hsi.py  gan_inn_trainer.py  inn_trainer.py  inn_trainer_base.py  inn_trainer_base_hsi.py  unit_trainer.py  unit_trainer_hsi.py  waic_hsi_trainer.py  waic_trainer.py
src/util/: approximate_filters.py  camera.py  susi.py
src/utils/: approximate_filters.py  collate_function.py  config_io.py  dimensionality_calculations.py  gather_da_result_data.py  gather_pa_spectra_from_dataset.py  normalizations.py  parser.py  susi.py
src/visualization/: __init__.py  cinn_preditcion_variability.ipynb  export_figures.py  manuscript_plots.ipynb  manuscript_plots.py  plot.py  plot_knn.py  plot_pai_spectra.py  plot_rf_feature_importance.py  plot_rf_results.py  plot_semantic_knn_diff.py  (+6 more)
test/: test_adapt_camera.py  test_datasets.py  test_features.py  test_invertibility.py
(+11 files in other folders)
